#
# This file is based on Bazel plugin for IntelliJ by The Bazel Authors, licensed under Apache-2.0;
# It was modified by JetBrains s.r.o. and contributors
#
module(
    name = "rules_intellij",
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "rules_java",
    version = "7.8.0",
)
bazel_dep(
    name = "rules_python",
    version = "0.34.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12", "python_versions")

bazel_dep(
    name = "rules_kotlin",
    version = "2.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_intellij_maven",
    artifacts = [
        "ch.epfl.scala:bsp4j:2.2.0-M2",
        "org.junit.jupiter:junit-jupiter:5.11.0",
        "org.junit.vintage:junit-vintage-engine:5.11.0",
        "org.junit.platform:junit-platform-console:1.11.0",
        "org.junit.platform:junit-platform-suite-engine:1.11.0",
        "org.junit.platform:junit-platform-suite-api:1.11.0",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "rules_intellij_maven",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

# Any SDK version

DEVKIT_BUILD_FILE = """
java_import(
    name = "devkit",
    jars = ["devkit/lib/devkit.jar"],
    visibility = ["//visibility:public"],
)
"""

_PYTHON_CE_BUILD_FILE = """
java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

_GO_BUILD_FILE = """
java_import(
    name = "go",
    jars = glob(["go-plugin/lib/*.jar", "go-plugin/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_CLION_BUILD_FILE = """
java_import(
    name = "cpp",
    visibility = ["//visibility:public"],
    jars = glob([
        "plugins/c-plugin/lib/*.jar",
        "plugins/cidr-base-plugin/lib/*.jar",
        "plugins/nativeDebug-plugin/lib/*.jar",
        "plugins/clion-ide/lib/clion-ide.jar",  # for CMakeNotificationProvider
        "plugins/clion-test-google-plugin/lib/clion-test-google-plugin.jar",  # for com.jetbrains.cidr.execution.testing.google
        "plugins/platform-images/lib/*.jar",  # for native debug plugin
    ]),
    tags = ["intellij-provided-by-sdk"],
)
"""

_ANDRIOD_PLUGIN_BUILD_FILE = """
java_import(
    name = "android",
    jars = glob(["android/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

# SDK 243

SDK_243_PLUGIN_REPOSITORY_VERSION = "243.22562.145"

SDK_243_INTELLIJ_REPOSITORY_VERSION = "243.22562.218"

SDK_243_INTELLIJ_REPOSITORY = "releases"  # or snapshots

SDK_243_CLION_REPOSITORY_VERSION = "2024.3.1.1"

SDK_243_CLION_REPOSITORY = "releases"  # or snapshots

IC_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s.zip" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

IC_243_SHA = "9887033a62c0b53f39a53cb14db71fc54f3e3b1f96ea7f2526a315e2d7371471"

http_archive(
    name = "intellij_ce_2024_3",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea243",
    sha256 = IC_243_SHA,
    url = IC_243_URL,
)

IC_243_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s-sources.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

IC_243_SOURCES_SHA = "25f4f9116997d20b7be70fdfaa471e4c0dc9da03defc1f6fa752e11fdf9fac3b"

http_jar(
    name = "intellij_ce_2024_3_sources",
    sha256 = IC_243_SOURCES_SHA,
    url = IC_243_SOURCES_URL,
)

DEVKIT_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

DEVKIT_243_SHA = "b3403b6a3c1dadd0eaaaa12cc21c910bc0e9c7264c55a9785a7ece188cba5ec6"

http_archive(
    name = "devkit_2024_3",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_243_SHA,
    url = DEVKIT_243_URL,
)

PYTHON_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

PYTHON_PLUGIN_243_SHA = "49d2ff442ddbedd40ab063b761ad6452fd0c0caaf4828256d5ce84da9b787e07"

http_archive(
    name = "python_2024_3",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_243_SHA,
    url = PYTHON_PLUGIN_243_URL,
)

GO_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

GO_PLUGIN_243_SHA = "5b893719694c65c82bae4df6916d94a3961b6390a6aaa8a077a1daf7954041a9"

http_archive(
    name = "go_2024_3",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_243_SHA,
    url = GO_PLUGIN_243_URL,
)

CLION_243_SHA = "fb6498edd13da3eeb4dc53e33d24e76ecea667ea4ecf9f61b5ded5f4c3c551c4"

CLION_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/clion/clion/%s/clion-%s.zip" % (SDK_243_CLION_REPOSITORY, SDK_243_CLION_REPOSITORY_VERSION, SDK_243_CLION_REPOSITORY_VERSION)

http_archive(
    name = "clion_2024_3",
    build_file_content = _CLION_BUILD_FILE,
    sha256 = CLION_243_SHA,
    url = CLION_243_URL,
)

ANDROID_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.android/%s/org.jetbrains.android-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

ANDROID_PLUGIN_243_SHA = "742962e523a5ffe4aece192223a8e5ee6f494353cb9f50952652e46b7922da48"

http_archive(
    name = "android_2024_3",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    sha256 = ANDROID_PLUGIN_243_SHA,
    url = ANDROID_PLUGIN_243_URL,
)

PERFORMANCE_PLUGIN_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

PERFORMANCE_PLUGIN_243_SHA = "69bb09af9c512bf3478fa9e14d06d4306fd083c72cb680f86f71ae599b868254"

http_jar(
    name = "performance_2024_3",
    sha256 = PERFORMANCE_PLUGIN_243_SHA,
    url = PERFORMANCE_PLUGIN_243_URL,
)

CODE_WITH_ME_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

CODE_WITH_ME_243_SHA = "12df6f39a5a610996afe614dc1874122bfc73859851b0bed791ee524a27a1761"

http_jar(
    name = "code_with_me_2024_3",
    sha256 = CODE_WITH_ME_243_SHA,
    url = CODE_WITH_ME_243_URL,
)

# SDK 251

SDK_251_PLUGIN_REPOSITORY_VERSION = "251.21418.62"

SDK_251_INTELLIJ_REPOSITORY_VERSION = "251.21418.62-EAP-SNAPSHOT"

SDK_251_INTELLIJ_REPOSITORY = "snapshots"  # releases or snapshots

SDK_251_CLION_REPOSITORY_VERSION = "251.20015.45-EAP-SNAPSHOT"

SDK_251_CLION_REPOSITORY = "snapshots"  # releases or snapshots

IC_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s.zip" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

IC_251_SHA = "89364ddf28d906c499973f8964329f1b6c3f1a4ddbbd773f17084cc2a8f5afbe"

http_archive(
    name = "intellij_ce_2025_1",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea251",
    sha256 = IC_251_SHA,
    url = IC_251_URL,
)

IC_251_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s-sources.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

IC_251_SOURCES_SHA = "5d444eda21f9e076704f487d08a1e8bd42da81319021d74468439f6210710d98"

http_jar(
    name = "intellij_ce_2025_1_sources",
    sha256 = IC_251_SOURCES_SHA,
    url = IC_251_SOURCES_URL,
)

DEVKIT_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

DEVKIT_251_SHA = "cc38ecece657d975d11f6288fe5c3e5cfd0e5308f5c5f2e6eb2cca581ab148a0"

http_archive(
    name = "devkit_2025_1",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_251_SHA,
    url = DEVKIT_251_URL,
)

PYTHON_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

PYTHON_PLUGIN_251_SHA = "1a776fa3fef668a560ab82b234d8d82138cd60e444db28b13e86c4bd661f07ad"

http_archive(
    name = "python_2025_1",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_251_SHA,
    url = PYTHON_PLUGIN_251_URL,
)

GO_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

GO_PLUGIN_251_SHA = "487f440033f03601623e7b00f1021d9de6b941542f4e107a6f8feed0da4e0f6a"

http_archive(
    name = "go_2025_1",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_251_SHA,
    url = GO_PLUGIN_251_URL,
)

CLION_251_SHA = "1c897723c8f7b109ca2fe6adc36f4643805b20d1fd162e6d215387db9266e384"

CLION_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/clion/clion/%s/clion-%s.zip" % (SDK_251_CLION_REPOSITORY, SDK_251_CLION_REPOSITORY_VERSION, SDK_251_CLION_REPOSITORY_VERSION)

http_archive(
    name = "clion_2025_1",
    build_file_content = _CLION_BUILD_FILE,
    sha256 = CLION_251_SHA,
    url = CLION_251_URL,
)

ANDROID_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.android/%s/org.jetbrains.android-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

ANDROID_PLUGIN_251_SHA = "a1b8b3cec89f948ae754380585c21197a4cf845d57be03891844e0187c00bd81"

http_archive(
    name = "android_2025_1",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    sha256 = ANDROID_PLUGIN_251_SHA,
    url = ANDROID_PLUGIN_251_URL,
)

PERFORMANCE_PLUGIN_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

PERFORMANCE_PLUGIN_251_SHA = "60bc30441c44b3e9a6acbd0821b9ae60acbae1cf1332bc7d75dad397761cffc9"

http_jar(
    name = "performance_2025_1",
    sha256 = PERFORMANCE_PLUGIN_251_SHA,
    url = PERFORMANCE_PLUGIN_251_URL,
)

CODE_WITH_ME_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

CODE_WITH_ME_251_SHA = "70d85481d75f2d33ae0a2e2fa61a44d0e18f0d70984ffdce22069cd45728cd83"

http_jar(
    name = "code_with_me_2025_1",
    sha256 = CODE_WITH_ME_251_SHA,
    url = CODE_WITH_ME_251_URL,
)
