#
# This file is based on Bazel plugin for IntelliJ by The Bazel Authors, licensed under Apache-2.0;
# It was modified by JetBrains s.r.o. and contributors
#
module(
    name = "rules_intellij",
    bazel_compatibility = [">=7.0.0"],
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "rules_java",
    version = "7.8.0",
)
bazel_dep(
    name = "rules_python",
    version = "0.34.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.12",
)
use_repo(python, "python_3_12", "python_versions")

bazel_dep(
    name = "rules_kotlin",
    version = "2.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(name = "rules_jvm_external", version = "6.2")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "rules_intellij_maven",
    artifacts = [
        "ch.epfl.scala:bsp4j:2.2.0-M2",
        "org.junit.jupiter:junit-jupiter:5.12.0",
        "org.junit.vintage:junit-vintage-engine:5.12.0",
        "org.junit.platform:junit-platform-console:1.12.0",
        "org.junit.platform:junit-platform-suite-engine:1.12.0",
        "org.junit.platform:junit-platform-suite-api:1.12.0",
    ],
    fail_if_repin_required = True,
    generate_compat_repositories = True,
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "rules_intellij_maven",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_jar = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_jar")

# Any SDK version

DEVKIT_BUILD_FILE = """
java_import(
    name = "devkit",
    jars = ["devkit/lib/devkit.jar"],
    visibility = ["//visibility:public"],
)
"""

_PYTHON_CE_BUILD_FILE = """
java_import(
    name = "python",
    jars = glob(["python-ce/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
filegroup(
  name = "python_helpers",
  srcs = glob(["python-ce/helpers/**/*"]),
  visibility = ["//visibility:public"],
)
"""

_GO_BUILD_FILE = """
java_import(
    name = "go",
    jars = glob(["go-plugin/lib/*.jar", "go-plugin/lib/modules/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

_CLION_BUILD_FILE = """
java_import(
    name = "cpp",
    visibility = ["//visibility:public"],
    jars = glob([
        "plugins/c-plugin/lib/*.jar",
        "plugins/cidr-base-plugin/lib/*.jar",
        "plugins/nativeDebug-plugin/lib/*.jar",
        "plugins/clion-ide/lib/clion-ide.jar",  # for CMakeNotificationProvider
        "plugins/clion-test-google-plugin/lib/clion-test-google-plugin.jar",  # for com.jetbrains.cidr.execution.testing.google
        "plugins/platform-images/lib/*.jar",  # for native debug plugin
    ]),
    tags = ["intellij-provided-by-sdk"],
)
"""

_ANDRIOD_PLUGIN_BUILD_FILE = """
java_import(
    name = "android",
    jars = glob(["android/lib/*.jar"]),
    visibility = ["//visibility:public"],
)
"""

# SDK 243

SDK_243_PLUGIN_REPOSITORY_VERSION = "243.22562.145"

SDK_243_INTELLIJ_REPOSITORY_VERSION = "243.22562.218"

SDK_243_INTELLIJ_REPOSITORY = "releases"  # or snapshots

SDK_243_CLION_REPOSITORY_VERSION = "2024.3.1.1"

SDK_243_CLION_REPOSITORY = "releases"  # or snapshots

IC_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s.zip" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

IC_243_SHA = "9887033a62c0b53f39a53cb14db71fc54f3e3b1f96ea7f2526a315e2d7371471"

http_archive(
    name = "intellij_ce_2024_3",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea243",
    sha256 = IC_243_SHA,
    url = IC_243_URL,
)

IC_243_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s-sources.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

IC_243_SOURCES_SHA = "25f4f9116997d20b7be70fdfaa471e4c0dc9da03defc1f6fa752e11fdf9fac3b"

http_jar(
    name = "intellij_ce_2024_3_sources",
    sha256 = IC_243_SOURCES_SHA,
    url = IC_243_SOURCES_URL,
)

DEVKIT_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

DEVKIT_243_SHA = "b3403b6a3c1dadd0eaaaa12cc21c910bc0e9c7264c55a9785a7ece188cba5ec6"

http_archive(
    name = "devkit_2024_3",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_243_SHA,
    url = DEVKIT_243_URL,
)

PYTHON_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

PYTHON_PLUGIN_243_SHA = "49d2ff442ddbedd40ab063b761ad6452fd0c0caaf4828256d5ce84da9b787e07"

http_archive(
    name = "python_2024_3",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_243_SHA,
    url = PYTHON_PLUGIN_243_URL,
)

GO_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

GO_PLUGIN_243_SHA = "5b893719694c65c82bae4df6916d94a3961b6390a6aaa8a077a1daf7954041a9"

http_archive(
    name = "go_2024_3",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_243_SHA,
    url = GO_PLUGIN_243_URL,
)

CLION_243_SHA = "fb6498edd13da3eeb4dc53e33d24e76ecea667ea4ecf9f61b5ded5f4c3c551c4"

CLION_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/clion/clion/%s/clion-%s.zip" % (SDK_243_CLION_REPOSITORY, SDK_243_CLION_REPOSITORY_VERSION, SDK_243_CLION_REPOSITORY_VERSION)

http_archive(
    name = "clion_2024_3",
    build_file_content = _CLION_BUILD_FILE,
    sha256 = CLION_243_SHA,
    url = CLION_243_URL,
)

ANDROID_PLUGIN_243_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.android/%s/org.jetbrains.android-%s.zip" % (SDK_243_PLUGIN_REPOSITORY_VERSION, SDK_243_PLUGIN_REPOSITORY_VERSION)

ANDROID_PLUGIN_243_SHA = "742962e523a5ffe4aece192223a8e5ee6f494353cb9f50952652e46b7922da48"

http_archive(
    name = "android_2024_3",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    sha256 = ANDROID_PLUGIN_243_SHA,
    url = ANDROID_PLUGIN_243_URL,
)

PERFORMANCE_PLUGIN_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

PERFORMANCE_PLUGIN_243_SHA = "69bb09af9c512bf3478fa9e14d06d4306fd083c72cb680f86f71ae599b868254"

http_jar(
    name = "performance_2024_3",
    sha256 = PERFORMANCE_PLUGIN_243_SHA,
    url = PERFORMANCE_PLUGIN_243_URL,
)

CODE_WITH_ME_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

CODE_WITH_ME_243_SHA = "12df6f39a5a610996afe614dc1874122bfc73859851b0bed791ee524a27a1761"

http_jar(
    name = "code_with_me_2024_3",
    sha256 = CODE_WITH_ME_243_SHA,
    url = CODE_WITH_ME_243_URL,
)

JSON_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/json/json/%s/json-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

JSON_243_SHA = "7d64d20ae2cb0e6a90a6bf1d696c5e8ea37ce1e0f77977a1805170ed3acf5bc7"

http_jar(
    name = "json_2024_3",
    sha256 = JSON_243_SHA,
    url = JSON_243_URL,
)

JSON_SPLIT_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/json/json-split/%s/json-split-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

JSON_SPLIT_243_SHA = "a65e514c8b87b9402da82784d85446371ac63025c89ed312bb83647de06d8711"

http_jar(
    name = "json_split_2024_3",
    sha256 = JSON_SPLIT_243_SHA,
    url = JSON_SPLIT_243_URL,
)

TOML_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml/%s/toml-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

TOML_243_SHA = "9318789cfdc93d0448622ebf240a11d27c472522d30ff356700a2849d6024971"

http_jar(
    name = "toml_2024_3",
    sha256 = TOML_243_SHA,
    url = TOML_243_URL,
)

TOML_CORE_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-core/%s/toml-core-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

TOML_CORE_243_SHA = "7a43f6ea2b7b7f43fb1b5e7743760332ddef57d1087f91efbd38fbba5927bb00"

http_jar(
    name = "toml_core_2024_3",
    sha256 = TOML_CORE_243_SHA,
    url = TOML_CORE_243_URL,
)

TOML_JSON_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-json/%s/toml-json-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

TOML_JSON_243_SHA = "0efbf1988a08a58785f65860e3989ab1e60322d1aa0e620a8ff21691abf243c1"

http_jar(
    name = "toml_json_2024_3",
    sha256 = TOML_JSON_243_SHA,
    url = TOML_JSON_243_URL,
)

TOML_GRAZIE_243_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-grazie/%s/toml-grazie-%s.jar" % (SDK_243_INTELLIJ_REPOSITORY, SDK_243_INTELLIJ_REPOSITORY_VERSION, SDK_243_INTELLIJ_REPOSITORY_VERSION)

TOML_GRAZIE_243_SHA = "8290081a7fd111cfcf978da9f2d7255a28b903379e8e66e45fbf0d38cb6c5e2d"

http_jar(
    name = "toml_grazie_2024_3",
    sha256 = TOML_GRAZIE_243_SHA,
    url = TOML_GRAZIE_243_URL,
)

# SDK 251

SDK_251_PLUGIN_REPOSITORY_VERSION = "251.22821.72"

SDK_251_INTELLIJ_REPOSITORY_VERSION = "251.22821.72-EAP-SNAPSHOT"

SDK_251_INTELLIJ_REPOSITORY = "snapshots"  # releases or snapshots

SDK_251_CLION_REPOSITORY_VERSION = "251.20015.45-EAP-SNAPSHOT"

SDK_251_CLION_REPOSITORY = "snapshots"  # releases or snapshots

IC_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s.zip" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

IC_251_SHA = "915a1ba0c3014b085799d1eb5abbc3f1f85e4ca5345f268144b63c7903b77936"

http_archive(
    name = "intellij_ce_2025_1",
    build_file = "@rules_intellij//intellij_platform_sdk:BUILD.idea251",
    sha256 = IC_251_SHA,
    url = IC_251_URL,
)

IC_251_SOURCES_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/idea/ideaIC/%s/ideaIC-%s-sources.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

IC_251_SOURCES_SHA = "516282550cc48854e2130889fe1039a3c853bc30e563183690adfdff4f513dd1"

http_jar(
    name = "intellij_ce_2025_1_sources",
    sha256 = IC_251_SOURCES_SHA,
    url = IC_251_SOURCES_URL,
)

DEVKIT_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/DevKit/%s/DevKit-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

DEVKIT_251_SHA = "a87d938c478e1ce4fa044d6c4467d1678b037b39df8eed6256d37dc5fa943a39"

http_archive(
    name = "devkit_2025_1",
    build_file_content = DEVKIT_BUILD_FILE,
    sha256 = DEVKIT_251_SHA,
    url = DEVKIT_251_URL,
)

PYTHON_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/PythonCore/%s/PythonCore-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

PYTHON_PLUGIN_251_SHA = "93c63c3ed7f7dd131d0ac805fa2f576a2195b3ab30bf09c6ab897e5d1be0c498"

http_archive(
    name = "python_2025_1",
    build_file_content = _PYTHON_CE_BUILD_FILE,
    sha256 = PYTHON_PLUGIN_251_SHA,
    url = PYTHON_PLUGIN_251_URL,
)

GO_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.plugins.go/%s/org.jetbrains.plugins.go-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

GO_PLUGIN_251_SHA = "ba63dff9be8b142b63af718a81e8f2d038768a99063505bfa35e19be319cee7c"

http_archive(
    name = "go_2025_1",
    build_file_content = _GO_BUILD_FILE,
    sha256 = GO_PLUGIN_251_SHA,
    url = GO_PLUGIN_251_URL,
)

CLION_251_SHA = "1c897723c8f7b109ca2fe6adc36f4643805b20d1fd162e6d215387db9266e384"

CLION_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/clion/clion/%s/clion-%s.zip" % (SDK_251_CLION_REPOSITORY, SDK_251_CLION_REPOSITORY_VERSION, SDK_251_CLION_REPOSITORY_VERSION)

http_archive(
    name = "clion_2025_1",
    build_file_content = _CLION_BUILD_FILE,
    sha256 = CLION_251_SHA,
    url = CLION_251_URL,
)

ANDROID_PLUGIN_251_URL = "https://plugins.jetbrains.com/maven/com/jetbrains/plugins/org.jetbrains.android/%s/org.jetbrains.android-%s.zip" % (SDK_251_PLUGIN_REPOSITORY_VERSION, SDK_251_PLUGIN_REPOSITORY_VERSION)

ANDROID_PLUGIN_251_SHA = "c4736f303c63f0256a4fab14eef5f0470fbb72599515d8366dea4b927e70ad8a"

http_archive(
    name = "android_2025_1",
    build_file_content = _ANDRIOD_PLUGIN_BUILD_FILE,
    sha256 = ANDROID_PLUGIN_251_SHA,
    url = ANDROID_PLUGIN_251_URL,
)

PERFORMANCE_PLUGIN_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/performanceTesting/performance-testing/%s/performance-testing-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

PERFORMANCE_PLUGIN_251_SHA = "cac6b36f2b1d38abf7d289962ee4dcb06361b731c0556f73d59b6830e129ea4f"

http_jar(
    name = "performance_2025_1",
    sha256 = PERFORMANCE_PLUGIN_251_SHA,
    url = PERFORMANCE_PLUGIN_251_URL,
)

CODE_WITH_ME_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/platform/backend-split/%s/backend-split-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

CODE_WITH_ME_251_SHA = "e66007dee66ba85f489eafbbe5aa0ebb506fd37051b0b5fddc0ac3efdca9d188"

http_jar(
    name = "code_with_me_2025_1",
    sha256 = CODE_WITH_ME_251_SHA,
    url = CODE_WITH_ME_251_URL,
)

JSON_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/json/json/%s/json-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

JSON_251_SHA = "a4fb90119937123691aca88d3a97f2279a36fbd9bcd09998311e913abf9bdf75"

http_jar(
    name = "json_2025_1",
    sha256 = JSON_251_SHA,
    url = JSON_251_URL,
)

JSON_SPLIT_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/json/json-split/%s/json-split-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

JSON_SPLIT_251_SHA = "a776ed680153347228d648bfbf94744fe4548b179b0b88f6e2f8254e27aca14b"

http_jar(
    name = "json_split_2025_1",
    sha256 = JSON_SPLIT_251_SHA,
    url = JSON_SPLIT_251_URL,
)

TOML_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml/%s/toml-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

TOML_251_SHA = "aeb1545dce39866f3e6a9299eee4fea4e1f1db3054928e2bde9baac63312fac1"

http_jar(
    name = "toml_2025_1",
    sha256 = TOML_251_SHA,
    url = TOML_251_URL,
)

TOML_CORE_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-core/%s/toml-core-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

TOML_CORE_251_SHA = "f5474fe1ad14297ec78777f7860ef1bcf19ca772d3c4f99fb372c9405e930368"

http_jar(
    name = "toml_core_2025_1",
    sha256 = TOML_CORE_251_SHA,
    url = TOML_CORE_251_URL,
)

TOML_JSON_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-json/%s/toml-json-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

TOML_JSON_251_SHA = "21408052034a3f07bed720c6b22b8eae92ff22ba67098af0b88a9a4ff9e99c49"

http_jar(
    name = "toml_json_2025_1",
    sha256 = TOML_JSON_251_SHA,
    url = TOML_JSON_251_URL,
)

TOML_GRAZIE_251_URL = "https://www.jetbrains.com/intellij-repository/%s/com/jetbrains/intellij/toml/toml-grazie/%s/toml-grazie-%s.jar" % (SDK_251_INTELLIJ_REPOSITORY, SDK_251_INTELLIJ_REPOSITORY_VERSION, SDK_251_INTELLIJ_REPOSITORY_VERSION)

TOML_GRAZIE_251_SHA = "8290081a7fd111cfcf978da9f2d7255a28b903379e8e66e45fbf0d38cb6c5e2d"

http_jar(
    name = "toml_grazie_2025_1",
    sha256 = TOML_GRAZIE_251_SHA,
    url = TOML_GRAZIE_251_URL,
)
