module(
    name = "rules_sonatype"
)

bazel_dep(name = "rules_kotlin", version = "2.0.0")

# Required by rules_jvm_external since version 6.3
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_java", version = "7.11.1")
bazel_dep(name = "rules_jvm_external", version = "6.3")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.apache.logging.log4j:log4j-api:2.24.1",
        "org.apache.httpcomponents:httpclient:4.5.13",
        "commons-cli:commons-cli:1.5.0",
        "org.sonatype.spice.zapper:spice-zapper:1.3",
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.14.0",
        "org.apache.logging.log4j:log4j-core:2.24.1",
        "org.slf4j:slf4j-simple:2.0.16",
    ],
#     fail_if_repin_required = True,
#     generate_compat_repositories = True,
#     lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "maven",
)