load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "testFixtures",
    testonly = 1,
    srcs = glob([
        # "testFixtures/kotlin/**/*.kt",
        "testFixtures/kotlin/**/*.java",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//rules_intellij/testing:lib",
        "@maven//:io_kotest_kotest_assertions_api_jvm",
        "@maven//:io_kotest_kotest_assertions_core_jvm",
        "@maven//:io_kotest_kotest_assertions_shared_jvm",
        "@maven//:io_kotest_kotest_common_jvm",
        "@maven//:org_junit_jupiter_junit_jupiter",
        "@server_maven//:org_jetbrains_kotlinx_kotlinx_coroutines_test",
    ],
)
